Bug 17882 - [patch] libpciaccess does not support GNU/kFreeBSD
Summary: [patch] libpciaccess does not support GNU/kFreeBSD
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Lib/pciaccess (show other bugs)
Version: git
Hardware: All BSD (Others)
: medium normal
Assignee: Xorg Project Team
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-10-02 23:31 UTC by petr.salinger
Modified: 2008-10-11 11:44 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
proposed patch (2.18 KB, patch)
2008-10-02 23:31 UTC, petr.salinger
no flags Details | Splinter Review

Description petr.salinger 2008-10-02 23:31:23 UTC
Created attachment 19348 [details] [review]
proposed patch

The libpciaccess does not support GNU/kFreeBSD, it have to initialize FreeBSD backend on GNU/kFreeBSD and detect whether pci_io.pi_sel.pc_domain member exists.
Please use attached patch.

Thanks

Petr
Comment 1 Julien Cristau 2008-10-11 11:44:55 UTC
On Thu, Oct  2, 2008 at 23:31:25 -0700, bugzilla-daemon@freedesktop.org wrote:

> The libpciaccess does not support GNU/kFreeBSD, it have to initialize FreeBSD
> backend on GNU/kFreeBSD and detect whether pci_io.pi_sel.pc_domain member
> exists.
> Please use attached patch.
> 
applied, thanks.

commit 6ae378611bb4caaf57311734d3adcb7e10ac3622
Author: Petr Salinger <petr.salinger@seznam.cz>
Date:   Sat Oct 11 20:22:28 2008 +0200

    Add support for GNU/kFreeBSD
    
    We need to initialize the FreeBSD backend on GNU/kFreeBSD and detect
    whether pci_io.pi_sel.pc_domain member exists.
    
    X.Org bug#17882 <http://bugs.freedesktop.org/show_bug.cgi?id=17882>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.