Add support for GNU/kFreeBSD

We need to initialize the FreeBSD backend on GNU/kFreeBSD and detect
whether pci_io.pi_sel.pc_domain member exists.

X.Org bug#17882 <http://bugs.freedesktop.org/show_bug.cgi?id=17882>